--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -70,9 +70,8 @@
                 <br>
                 <a href="/pedido/visualizarpedidos">Visualizar Pedidos</a>
                 <br>
-                <a href="/produtos">Produtos</a>
+                <a href="/produtos">Produtos e Serviços</a>
                 <br>
-                <a href="/servicos">Serviços</a>
                 <br>
             </div>
         </div>
