--- a/src/main/resources/templates/produtos-servicos-menu.html
+++ b/src/main/resources/templates/produtos-servicos-menu.html
@@ -70,7 +70,7 @@
                 <br>
                 <a href="/produto/listarprodutos" style="text-decoration: none;">Listar Produtos</a>
                 <br>
-                <a href="/servico/listarservicos" style="text-decoration: none;">Listar Serviços</a>
+                <a href="/produto/listarservicos" style="text-decoration: none;">Listar Serviços</a>
                 <br>
             </div>
         </div>
