--- a/src/main/resources/templates/novo-pedido.html
+++ b/src/main/resources/templates/novo-pedido.html
@@ -14,17 +14,6 @@
 
 <body>
 <script>
-    $(window).ready(function() {
-        $("#form-id").on("keypress", function (event) {
-            console.log("aaya");
-            var keyPressed = event.keyCode || event.which;
-            if (keyPressed === 13) {
-                alert("You pressed the Enter key!!");
-                event.preventDefault();
-                return false;
-            }
-        });
-    });
     function buscaItens(descricao, tipoItem){
         window.location.href = '/pedido/buscaitem?descricao=' + descricao + '&tipo=' + tipoItem;
     }
@@ -34,7 +23,6 @@
     function removeItem(id) {
         window.location.href = window.document.location.origin + '/pedido/removeprodutoservico?id=' + id;
     }
-
 
 
 </script>
@@ -92,25 +80,27 @@
 <div class="container mt-3">
     <div class="boxborder">
         <form th:object="${pedido}" th:action="@{/pedido/efetivar}" method="post">
-            <select id="tipoItem">
-                <option value="produto">Produto</option>
-                <option value="servico">Serviço</option>
-            </select>
             <div class="text-center">
-                <label class="form-labels">Descrição: </label>
-                <input class="form-inputs" id="descricaoItem" name="descricaoItem" style="width: 70px">
+                <label class="form-labels">Tipo: </label>
+                <select id="tipoItem" class="form-control">
+                    <option value="produto">Produto</option>
+                    <option value="servico">Serviço</option>
+                </select>
+                <label class="form-labels ml-4">Descrição: </label>
+                <input class="form-inputs" id="descricaoItem" name="descricaoItem" style="width: 150px">
                 <button class="btn-primary btn" type="button"
                         th:attr="onclick=|buscaItens(document.getElementById('descricaoItem').value, document.getElementById('tipoItem').value)|"
                         id="buscaItem" name="buscaItem">Buscar
                 </button>
             </div>
+
             <div>
                 <div>
-                    <h4 class="text-center mt-5">Itens Disponíveis</h4>
                     <div th:if="${#lists.isEmpty(itensEncontrados)}">
-                        <!-- colocar alguma coisa? -->
+                        <h4 class="text-center mt-5">Nenhum item com essa descrição encontrado, verifique os dados informados.</h4>
                     </div>
                     <div th:if="${!#lists.isEmpty(itensEncontrados)}">
+                        <h4 class="text-center mt-5">Itens Disponíveis</h4>
                         <table class="table text-center">
                             <tr>
                                 <th>Codigo</th>
