Melhorias na logica e correcao dos testes de controller

--- a/src/main/resources/templates/novo-pedido.html
+++ b/src/main/resources/templates/novo-pedido.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Vender</title>
+    <title>Novo Pedido</title>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-reboot.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-grid.css">
@@ -25,55 +25,14 @@
     }
 
 
+
 </script>
-<nav class="navbar navbar-expand-lg bg-success navbar-light ">
+<nav class="navbar navbar-expand-lg bg-success navbar-light w-auto">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/" style="font-size: 30px;"><b>Brand</b></a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-                data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
-                       data-mdb-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li>
-                            <a class="dropdown-item" href="#">Action</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Another action</a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider"/>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="navbar-nav d-flex flex-row me-1">
-                <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
-                </li>
-                <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-            </ul>
-
-            <form class="w-auto">
-                <input type="search" class="form-control" placeholder="Type query" aria-label="Search">
-            </form>
-
-        </div>
+        <a class="navbar-brand" href="/" style="font-size: 30px;"><b>Kleyton Marcenaria</b><img
+                style="margin-left: 20px; border-radius:10px"
+                src="https://i.pinimg.com/originals/70/17/1f/70171feba5b0058cca7b28bb01dd0f06.jpg" width="75px"
+                height="75px"></a>
     </div>
 </nav>
 
@@ -97,7 +56,8 @@
             <div>
                 <div>
                     <div th:if="${#lists.isEmpty(itensEncontrados)}">
-                        <h4 class="text-center mt-5">Nenhum item com essa descrição encontrado, verifique os dados informados.</h4>
+                        <h4 class="text-center mt-5">Nenhum item com essa descrição encontrado, verifique os dados
+                            informados.</h4>
                     </div>
                     <div th:if="${!#lists.isEmpty(itensEncontrados)}">
                         <h4 class="text-center mt-5">Itens Disponíveis</h4>
