--- a/src/main/resources/templates/lista-pedidos.html
+++ b/src/main/resources/templates/lista-pedidos.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Vender</title>
+    <title>Pedidos</title>
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-reboot.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap-grid.css">
@@ -23,93 +23,15 @@
 
 </script>
 <body>
-<nav class="navbar navbar-expand-lg bg-success navbar-light ">
+<nav class="navbar navbar-expand-lg bg-success navbar-light w-auto">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/" style="font-size: 30px;"><b>Brand</b></a>
-        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-                data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="/" id="navbarDropdown" role="button"
-                       data-mdb-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li>
-                            <a class="dropdown-item" href="#">Action</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Another action</a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider"/>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="navbar-nav d-flex flex-row me-1">
-                <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
-                </li>
-                <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
-                </li>
-            </ul>
-
-            <form class="w-auto">
-                <input type="search" class="form-control" placeholder="Type query" aria-label="Search">
-            </form>
-
-        </div>
+        <a class="navbar-brand" href="/" style="font-size: 30px;"><b>Kleyton Marcenaria</b><img style="margin-left: 20px; border-radius:10px" src="https://i.pinimg.com/originals/70/17/1f/70171feba5b0058cca7b28bb01dd0f06.jpg" width="75px" height="75px"></a>
     </div>
 </nav>
 
 <div class="container mt-3">
     <div class="boxborder text-center">
-        <h1>Todos Pedidos</h1>
-        <!--<form action="/pedido/buscapedidoscomfiltros" th:action="@{/pedido/buscapedidoscomfiltros}"
-              method="POST">
-            <p>Para filtrar por loja, selecione abaixo e clique em buscar</p>
-            <label class="mr-2">Filtrar por Status</label>
-            <select th:value="${status}" th:name="status" th:id="status">
-                <option value="">Selecione</option>
-                <option value="EM_ABERTO">Em Aberto</option>
-                <option value="CONFIRMADO">Confirmado</option>
-                <option value="FECHADO">Fechado</option>
-                <option value="CANCELADO">Cancelado</option>
-            </select>
-            <br><br>
-            <label>Mais Filtros?</label>
-            <input type="radio" id="maisFiltros" name="maisFiltros" value="true"
-                   onclick="mostrarMaisFiltros(1);" class="ml-2 mr-1">Sim
-            <input type="radio" id="maisFiltros" name="maisFiltros" value="false"
-                   onclick="mostrarMaisFiltros(0);" class="ml-3 mr-1" checked="checked">Não
-            <br>
-            <div class="container" id="filtros">
-                <label class="mr-2">Filtrar por periodo
-                    <input type="date" th:value="${dataSolicitadoInicio}" th:name="dataSolicitadoInicio"
-                           th:id="dataSolicitadoInicio"></label>
-                <input type="date" th:value="${dataSolicitadoFim}" th:name="dataSolicitadoFim"
-                       th:id="dataSolicitadoFim"></label>
-                <br>
-                <label class="mr-2">CPF/CNPJ do comprador
-                    <input type="text" th:value="${cpfCnpf}" th:name="cpfCnpj"
-                           th:id="cpfCnpj">
-                </label>
-            </div>
-            <button type="submit" class="btn btn-primary mt-2"> Buscar <i class="fa fa-search"
-                                                                          aria-hidden="true"></i></button>
-        </form>-->
+        <h1>Todos os Pedidos</h1>
         <table class="table">
             <tr>
                 <th>Código</th>
